--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
         </div>
         <div class="column left">
-        <img src="/images/bg-img-2.jpeg" style="height: 30rem;" alt="">
+        <img src="/bg-img-2.jpeg" style="height: 30rem;" alt="">
         </div>
     </section>
 
@@ -208,7 +208,7 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="/images/Leave.jfif" alt="" srcset="">
+                        <img src="/Leave.jfif" alt="" srcset="">
                         <div class="text">
                             Leave Management System</div>
                         <p>
@@ -218,7 +218,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/Log.png" alt="Log Monitoring Tool">
+                        <img src="/Log.png" alt="Log Monitoring Tool">
                         <div class="text">
                             Log Monitoring Tool in Java</div>
                         <p>
@@ -227,7 +227,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/Aucation.jfif" alt="Online Auction">
+                        <img src="/Aucation.jfif" alt="Online Auction">
                         <div class="text">
                             Online Auction</div>
                         <p>
@@ -236,7 +236,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/car.jfif" alt="Car Racing Game">
+                        <img src="/car.jfif" alt="Car Racing Game">
                         <div class="text">
                             Car Racing Game in C</div>
                         <p>
