--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <p>
                         I'm from Pune, India. I have done my post-graduation in Computer Science from VSS College , Jalna. Designing and Coding have been my passion since the days I started working with computers. I'm good in Java, HTML, CSS, Javascript,
                         C, C++ and I have also Knowledge of RDBMS PostgreSQL and SQL and I have also knowledge of Linux, Unix, Windows till now I have used AWS Cloud and I am interested in Cloud computing. </p>
-                    <a href="https://1drv.ms/b/s!AjMTzmtSeO-yg3uPCU2cKGjJHDu2?e=G3hzFM" download>Visit My CV</a>
+                    <a href="https:/***/1drv.ms/b/s!AjMTzmtSeO-yg3uPCU2cKGjJHDu2?e=G3hzFM" download>Visit My CV</a>
                 </div>
             </div>
         </div>
@@ -101,7 +101,7 @@
                         <div class="text">
                             Bachelor's Degree</div>
                         <p>
-                            2019<br>Completed Bachelor's in Computer Science from Nowrosjee Wadia College Pune.</p>
+                            2019<br>Completed Bachelor's in Computer Science from Savitribai Phule University Pune.</p>
                     </div>
                 </div>
                 <div class="card">
@@ -111,7 +111,7 @@
                             HSC</div>
                         <p>
                             2015<br> Completed highschool education from
-                            <br>NSB College Pune.</p>
+                            <br>Lokseva EnglishMediumSchool & Jr. College Phulgaon Pune.</p>
                     </div>
                 </div>
 
